# ai-dlite

./: README.md
project/: CMakeLists.txt  build-cygwin.sh  build.sh
project/antlr/: CMakeLists.txt  Makefile  antlr3config.h
project/dldtb/: build.xml
project/dlite/: CMakeLists.txt  Makefile  abox.cpp  abox.h  dlite.h  factory.cpp  factory.h  log.cpp  main.h  node.cpp  node.h  reasoner.cpp  reasoner.h  sdep.h  store.cpp  store.h  symtable.cpp  tbox.cpp
project/dlparser/: CMakeLists.txt  Makefile  Ontology.g  Ontology.tokens  OntologyLexer.c  OntologyLexer.h  OntologyParser.c  OntologyParser.h  context.cpp  context.h  dlparser.cpp
project/dlparser/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
project/dltools/: CMakeLists.txt  Makefile  dltools.h  fmtinfix.cpp  fmtinfix.h  session.cpp
project/dltools/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
project/dltools/nbproject/private/: configurations.xml
project/dlutil/: CMakeLists.txt  Makefile  main.cpp
project/doc/: docstyle.css  doxygen.cfg  footer.html  header.html  mainpage.h
project/shared/: cache.h  object.h  shared.h  sptr.h
project/sqlite/: CMakeLists.txt  (+1 more)
project/test/: CMakeLists.txt  Makefile  main.cpp  test.h
project/test/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
(+102 files in other folders)
